[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-fastapi-app"
version = "1.0.0"
description = "A simple FastAPI test application"
readme = "README.md"
requires-python = ">=3.6.8"
authors = [
    {name = "Developer", email = "developer@example.com"},
]
dependencies = [
    "fastapi>=0.83.0",
    "uvicorn[standard]>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
start = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "W", "F", "I", "N", "B", "A", "C4", "T20"]
ignore = ["E501"] 